fix CMakeLists.txt for install

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ ENDIF()
 # Equation system
 # =========================================================================
 SET(FLEXI_EQNSYSNAME "navierstokes" CACHE STRING
-                     "Used equation system (navierstokes/linearscalaradvection/rans_sa)")
+                     "Used equation system (navierstokes/linearscalaradvection/rans_sa/rans_komega)")
 SET_PROPERTY(CACHE FLEXI_EQNSYSNAME  PROPERTY STRINGS ${EQNSYSTEMS})
 IF(   FLEXI_EQNSYSNAME STREQUAL "navierstokes")
   ADD_DEFINITIONS(-DPP_nVar=5 -DPP_nVarPrim=6 -DEQNSYSNR=2)
@@ -43,6 +43,9 @@ ELSEIF(FLEXI_EQNSYSNAME STREQUAL "linearscalaradvection")
   ADD_DEFINITIONS(-DPP_nVar=1 -DPP_nVarPrim=1 -DEQNSYSNR=1)
   SET(WITHEOS 0)
 ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_sa")
+  ADD_DEFINITIONS(-DPP_nVar=6 -DPP_nVarPrim=7 -DEQNSYSNR=3)
+  SET(WITHEOS 1)
+ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_komega")
   ADD_DEFINITIONS(-DPP_nVar=6 -DPP_nVarPrim=7 -DEQNSYSNR=3)
   SET(WITHEOS 1)
 ELSE()
@@ -123,7 +126,9 @@ IF (FLEXI_PARABOLIC)
   ENDIF()
 
   # Set the law for viscosity
-  IF((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_sa"))
+  IF((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR 
+     (FLEXI_EQNSYSNAME STREQUAL "rans_sa")      OR
+     (FLEXI_EQNSYSNAME STREQUAL "rans_komega") )
     SET(FLEXI_VISCOSITY "constant" CACHE STRING "Method to calculate viscosity (constant/sutherland/powerlaw)")
     SET_PROPERTY(CACHE FLEXI_VISCOSITY PROPERTY STRINGS constant sutherland powerlaw)
     IF(    FLEXI_VISCOSITY STREQUAL "constant")
