--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -46,3 +46,27 @@ jobs:
           make
           make install
         working-directory: ${{github.workspace}}
+
+      - name: Build_spalart_allmaras_model
+        run: |
+          rm -rf build/*
+          cd build
+          cmake .. \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_INSTALL_PREFIX=build/platform \
+          -DFLEXI_2D=ON \
+          -DFLEXI_EDDYVISCOSITY=OFF \
+          -DFLEXI_EQNSYSNAME=rans_sa \
+          -DFLEXI_FV=OFF \
+          -DFLEXI_LIFTING=br1 \
+          -DFLEXI_NODETYPE=GAUSS \
+          -DFLEXI_PARABOLIC=ON \
+          -DFLEXI_PERFORMANCE=OFF \
+          -DFLEXI_POLYNOMIAL_DEGREE=N \
+          -DFLEXI_SPLIT_DG=OFF \
+          -DFLEXI_TESTCASE=default \
+          -DFLEXI_VISCOSITY=sutherland \
+          -DLIBS_USE_MPI=ON
+          make -j 4
+          make install
+        working-directory: ${{github.workspace}} 
