--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -41,6 +41,10 @@ jobs:
           -DFLEXI_SPLIT_DG=OFF \
           -DFLEXI_TESTCASE=default \
           -DFLEXI_VISCOSITY=constant \
+          -DHDF5_ROOT=/home/saayzf/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/saayzf/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/saayzf/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=OFF \
           -DLIBS_USE_MPI=OFF 
           make
           make install
@@ -66,8 +70,12 @@ jobs:
           -DFLEXI_SPLIT_DG=OFF \
           -DFLEXI_TESTCASE=default \
           -DFLEXI_VISCOSITY=constant \
+          -DHDF5_ROOT=/home/saayzf/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/saayzf/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/saayzf/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=OFF \
           -DLIBS_USE_MPI=ON 
-          make
+          make -j 4
           make install
         working-directory: ${{github.workspace}}
 
@@ -89,9 +97,43 @@ jobs:
           -DFLEXI_SPLIT_DG=OFF \
           -DFLEXI_TESTCASE=default \
           -DFLEXI_VISCOSITY=sutherland \
+          -DHDF5_ROOT=/home/saayzf/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/saayzf/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/saayzf/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=OFF \
           -DLIBS_USE_MPI=ON
           make -j 4
           make install
         working-directory: ${{github.workspace}} 
+
+      - name: unit_test_navier_stokes
+        run: |
+          rm -rf build/*
+          cd build
+          cmake .. \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DFLEXI_EDDYVISCOSITY=OFF \
+          -DFLEXI_EQNSYSNAME=navierstokes \
+          -DFLEXI_EXACT_MASSMATRIX=OFF \
+          -DFLEXI_FV=OFF \
+          -DFLEXI_FV_RECONSTRUCTION=OFF \
+          -DFLEXI_LIFTING=br1 \
+          -DFLEXI_NODETYPE=GAUSS \
+          -DFLEXI_PARABOLIC=ON \
+          -DFLEXI_PERFORMANCE=OFF \
+          -DFLEXI_POLYNOMIAL_DEGREE=N \
+          -DFLEXI_PP_LIMITER=OFF \
+          -DFLEXI_SPLIT_DG=OFF \
+          -DFLEXI_TESTCASE=default \
+          -DFLEXI_VISCOSITY=constant \
+          -DHDF5_ROOT=/home/saayzf/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/saayzf/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/saayzf/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=ON \
+          -DLIBS_USE_MPI=ON 
+          make -j 4
+          make install
+      working-directory: ${{github.workspace}} 
+      
 
       
