--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -285,7 +285,4 @@ ENDIF()
 # =========================================================================
 # Install
 # =========================================================================
-INSTALL(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/configuration.cmake ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/print_userblock.c DESTINATION bin)
-INSTALL(TARGETS flexi
-        LIBRARY DESTINATION lib
-        RUNTIME DESTINATION bin )
+INSTALL(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/configuration.cmake DESTINATION bin)
