--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,8 +30,8 @@ jobs:
           -DFLEXI_EDDYVISCOSITY=OFF \
           -DFLEXI_EQNSYSNAME=navierstokes \
           -DFLEXI_EXACT_MASSMATRIX=OFF \
-          -DFLEXI_FV=OFF \
-          -DFLEXI_FV_RECONSTRUCTION=OFF \
+          -DFLEXI_FV=SWITCH \
+          -DFLEXI_FV_RECONSTRUCTION=ON \
           -DFLEXI_LIFTING=br1 \
           -DFLEXI_NODETYPE=GAUSS \
           -DFLEXI_PARABOLIC=ON \
@@ -51,35 +51,7 @@ jobs:
           make install
         working-directory: ${{github.workspace}} 
 
-      - name: Build_spalart_allmaras_model
-        run: |
-          rm -rf build/*
-          cd build
-          cmake .. \
-          -DCMAKE_BUILD_TYPE=Release \
-          -DFLEXI_2D=ON \
-          -DFLEXI_EDDYVISCOSITY=OFF \
-          -DFLEXI_EQNSYSNAME=rans_sa \
-          -DFLEXI_FV=OFF \
-          -DFLEXI_LIFTING=br2 \
-          -DFLEXI_NODETYPE=GAUSS \
-          -DFLEXI_PARABOLIC=ON \
-          -DFLEXI_PERFORMANCE=ON \
-          -DFLEXI_POLYNOMIAL_DEGREE=N \
-          -DFLEXI_SPLIT_DG=OFF \
-          -DFLEXI_TESTCASE=default \
-          -DFLEXI_VISCOSITY=sutherland \
-          -DLIBS_BUILD_HDF5=OFF \
-          -DHDF5_ROOT=/home/gitlab-runner/softwares/hdf5-1.14.3 \
-          -DHDF5_LIBRARIES=/home/gitlab-runner/softwares/hdf5-1.14.3/lib/libhdf5.a \
-          -DHDF5_INCLUDE_DIRS=/home/gitlab-runner/softwares/hdf5-1.14.3/include \
-          -DFLEXI_UNITTESTS=OFF \
-          -DLIBS_USE_MPI=ON
-          make -j 4
-          make install
-        working-directory: ${{github.workspace}} 
-
-      - name: unit_test_navier_stokes
+      - name: unit_test_navier_stokes_FVoff
         run: |
           rm -rf build/*
           cd build
@@ -108,6 +80,126 @@ jobs:
           make -j 4
           make install
         working-directory: ${{github.workspace}} 
+
+      - name: unit_test_navier_stokes_splitDG
+        run: |
+          rm -rf build/*
+          cd build
+          cmake .. \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DFLEXI_EDDYVISCOSITY=OFF \
+          -DFLEXI_EQNSYSNAME=navierstokes \
+          -DFLEXI_EXACT_MASSMATRIX=OFF \
+          -DFLEXI_FV=SWITCH \
+          -DFLEXI_FV_RECONSTRUCTION=ON \
+          -DFLEXI_LIFTING=br1 \
+          -DFLEXI_NODETYPE=GAUSS \
+          -DFLEXI_PARABOLIC=ON \
+          -DFLEXI_PERFORMANCE=OFF \
+          -DFLEXI_POLYNOMIAL_DEGREE=N \
+          -DFLEXI_PP_LIMITER=ON \
+          -DFLEXI_SPLIT_DG=ON \
+          -DFLEXI_TESTCASE=default \
+          -DFLEXI_VISCOSITY=constant \
+          -DLIBS_BUILD_HDF5=OFF \
+          -DHDF5_ROOT=/home/gitlab-runner/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/gitlab-runner/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/gitlab-runner/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=ON \
+          -DLIBS_USE_MPI=ON 
+          make -j 4
+          make install
+        working-directory: ${{github.workspace}}    
+        
+      - name: unit_test_kg_FVoff
+        run: |
+          rm -rf build/*
+          cd build
+          cmake .. \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DFLEXI_EDDYVISCOSITY=OFF \
+          -DFLEXI_EQNSYSNAME=rans_kg \
+          -DFLEXI_EXACT_MASSMATRIX=OFF \
+          -DFLEXI_FV=OFF \
+          -DFLEXI_FV_RECONSTRUCTION=OFF \
+          -DFLEXI_LIFTING=br1 \
+          -DFLEXI_NODETYPE=GAUSS \
+          -DFLEXI_PARABOLIC=ON \
+          -DFLEXI_PERFORMANCE=OFF \
+          -DFLEXI_POLYNOMIAL_DEGREE=N \
+          -DFLEXI_PP_LIMITER=OFF \
+          -DFLEXI_SPLIT_DG=OFF \
+          -DFLEXI_TESTCASE=default \
+          -DFLEXI_VISCOSITY=constant \
+          -DLIBS_BUILD_HDF5=OFF \
+          -DHDF5_ROOT=/home/gitlab-runner/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/gitlab-runner/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/gitlab-runner/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=ON \
+          -DLIBS_USE_MPI=ON 
+          make -j 4
+          make install
+        working-directory: ${{github.workspace}} 
+
+      - name: unit_test_kg_FVon
+        run: |
+          rm -rf build/*
+          cd build
+          cmake .. \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DFLEXI_EDDYVISCOSITY=OFF \
+          -DFLEXI_EQNSYSNAME=rans_kg \
+          -DFLEXI_EXACT_MASSMATRIX=OFF \
+          -DFLEXI_FV=SWITCH \
+          -DFLEXI_FV_RECONSTRUCTION=ON \
+          -DFLEXI_LIFTING=br1 \
+          -DFLEXI_NODETYPE=GAUSS \
+          -DFLEXI_PARABOLIC=ON \
+          -DFLEXI_PERFORMANCE=OFF \
+          -DFLEXI_POLYNOMIAL_DEGREE=N \
+          -DFLEXI_PP_LIMITER=OFF \
+          -DFLEXI_SPLIT_DG=OFF \
+          -DFLEXI_TESTCASE=default \
+          -DFLEXI_VISCOSITY=constant \
+          -DLIBS_BUILD_HDF5=OFF \
+          -DHDF5_ROOT=/home/gitlab-runner/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/gitlab-runner/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/gitlab-runner/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=ON \
+          -DLIBS_USE_MPI=ON 
+          make -j 4
+          make install
+        working-directory: ${{github.workspace}}  
+
+      - name: unit_test_kg_splitDG
+        run: |
+          rm -rf build/*
+          cd build
+          cmake .. \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DFLEXI_EDDYVISCOSITY=OFF \
+          -DFLEXI_EQNSYSNAME=rans_kg \
+          -DFLEXI_EXACT_MASSMATRIX=OFF \
+          -DFLEXI_FV=SWITCH \
+          -DFLEXI_FV_RECONSTRUCTION=ON \
+          -DFLEXI_LIFTING=br1 \
+          -DFLEXI_NODETYPE=GAUSS \
+          -DFLEXI_PARABOLIC=ON \
+          -DFLEXI_PERFORMANCE=OFF \
+          -DFLEXI_POLYNOMIAL_DEGREE=N \
+          -DFLEXI_PP_LIMITER=ON \
+          -DFLEXI_SPLIT_DG=ON \
+          -DFLEXI_TESTCASE=default \
+          -DFLEXI_VISCOSITY=constant \
+          -DLIBS_BUILD_HDF5=OFF \
+          -DHDF5_ROOT=/home/gitlab-runner/softwares/hdf5-1.14.3 \
+          -DHDF5_LIBRARIES=/home/gitlab-runner/softwares/hdf5-1.14.3/lib/libhdf5.a \
+          -DHDF5_INCLUDE_DIRS=/home/gitlab-runner/softwares/hdf5-1.14.3/include \
+          -DFLEXI_UNITTESTS=ON \
+          -DLIBS_USE_MPI=ON 
+          make -j 4
+          make install
+        working-directory: ${{github.workspace}}   
       
 
       
