trigger actions on branch

--- a/.github/workflows/kgModel-dev.yml
+++ b/.github/workflows/kgModel-dev.yml
@@ -3,10 +3,10 @@ name: FlexiTestBuild
 on:
   push:
     branches:
-      - master
+      - kgModel-dev
   pull_request:
     branches:
-      - master
+      - kgModel-dev
 
 jobs:
   build:
