A rans k-g version that does not blow up, not correct either. Check the case in hybrid_tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ autoInstall.sh
 autoInstallLocal.sh
 CMakeCache.txt
 CMakeFiles/cmake.check_cache
+hybrid_tutorials/01_flatplate/01_RK_explicit/userblock.tmp
