--- a/hybrid_tutorials/01_flatplate/01_rans_kg_rungeKutta/parameter.ini
+++ b/hybrid_tutorials/01_flatplate/01_rans_kg_rungeKutta/parameter.ini
@@ -27,9 +27,9 @@ Mu0              = 0.0000171
 ! =============================================================================== !
 ! TIMEDISC
 ! =============================================================================== !
-tend             = 0.15              ! End time
-CFLscale         = 0.9               ! Scaling of theoretical CFL number
-DFLscale         = 0.9               ! Scaling of theoretical DFL number
+tend             = 1.5               ! End time
+CFLscale         = 0.3               ! Scaling of theoretical CFL number
+DFLscale         = 0.3               ! Scaling of theoretical DFL number
 ! =============================================================================== !
 ! RIEMANN
 ! =============================================================================== !
@@ -37,14 +37,14 @@ Riemann          = lf
 ! =============================================================================== !
 ! ANALYZE
 ! =============================================================================== !
-Analyze_dt       = 1.e-7             ! Timestep of analyze outputs
-nWriteData       = 50                ! Intervall as multiple of Analyze_dt at which HDF5 files (e.g.
+Analyze_dt       = 1.e-5             ! Timestep of analyze outputs
+nWriteData       = 500               ! Intervall as multiple of Analyze_dt at which HDF5 files (e.g.
                                      ! State,TimeAvg,Fluc) are written.
-CalcErrorNorms   = F                 ! Calculate error norms
+CalcErrorNorms   = T                 ! Calculate error norms
 CalcBodyForces   = F                 ! Calculate body forces (BC 4/9)
 CalcBulkVelocity = F                 ! Calculate bulk velocity/momentum
 CalcMeanFlux     = F                 ! Calculate mean flux of conservative vars through boundary
-CalcWallVelocity = T                 ! Calculate velocities at the walls (BC 3/4/9)
+CalcWallVelocity = F                 ! Calculate velocities at the walls (BC 3/4/9)
 CalcTimeAverage  = F                 ! Calculate time average of field data
 CalcResiduals    = T                 ! Set true to compute residuals
 !=============================================================================================
