Check in the cavity setup that converges for k-g

--- a/hybrid_tutorials/02_cavity/parameter_flexi.ini
+++ b/hybrid_tutorials/02_cavity/parameter_flexi.ini
@@ -26,14 +26,14 @@
 ! =============================================================================== !
 ! OUTPUT
 ! =============================================================================== !
-ProjectName      = Re400_cavity12x12
+ProjectName      = Re4000_cavity12x12
 Logging          = F
 outputFormat     = 0  ! =0, no visu, >0 visualize
 
 ! =============================================================================== !
 ! INTERPOLATION
 ! =============================================================================== !
-N                = 3  ! Polynomial degree
+N                = 5  ! Polynomial degree
 NAnalyze         = 10 ! Number of analyze points
 
 ! =============================================================================== !
@@ -52,7 +52,7 @@ IniExactFunc     = 1
 IniRefState      = 2
 RefState         = (/1.225,1.,0.,0.,101325., 0., 0./)
 RefState         = (/1.225,0.,0.,0.,101325., 0.01, 0.01/)
-mu0              = 0.0025
+mu0              = 0.00015
 R                = 1
 Pr               = 0.72
 kappa            = 1.4
@@ -60,17 +60,16 @@ kappa            = 1.4
 ! =============================================================================== !
 ! RIEMANN
 ! =============================================================================== !
-Riemann          = lf
-RiemannBC        = lf
+Riemann          = hllc
 
 ! =============================================================================== !
 ! TIMEDISC
 ! =============================================================================== !
 tend             = 100.0
-Analyze_dt       = 0.5
-nWriteData       = 1
-CFLscale         = 0.6
-DFLscale         = 0.4
+Analyze_dt       = 0.002
+nWriteData       = 500
+CFLscale         = 0.3
+DFLscale         = 0.3
 
 ! =============================================================================== !
 ! ANALYZE
