Fixed in AddBodySourceTerm, added support for NS.

--- a/tutorials/plane_turbulent_channel_flow/parameter_hopr.ini
+++ b/tutorials/plane_turbulent_channel_flow/parameter_hopr.ini
@@ -18,8 +18,9 @@ Meshtype      = 1                            ! Mesh Types: 1 - Cube     (origin 
                                              !             2 - Bilinear (8 points CGNS notation)
                                              !             3 - Curved (see Whichmapping)
 
-X0           = (/0.,-1.,-1.570796326794897/) ! corner node
-DX           = (/2PI,2.,PI/)
+! X0           = (/0.,-1.,-1.570796326794897/) ! corner node
+X0           = (/0.,0.,0./) ! corner node
+DX           = (/6PI,2.,2PI/)
 StretchType  = (/0,3,0/)                     ! (x,y,z) - direction and type 3:Bell shape
 DxMaxToDxMin = (/1.,8.,1./)                  ! ratio of largest to smallest cell
 
