--- a/hybrid_tutorials/04_turbulent_channel_flow/flexi.ini
+++ b/hybrid_tutorials/04_turbulent_channel_flow/flexi.ini
@@ -1,7 +1,7 @@
 ! =============================================================================== !
 ! OUTPUT
 ! =============================================================================== !
-ProjectName      = turb_channel
+ProjectName      = turb_chan_re0180
 Logging          = F
 outputFormat     = 0              ! =0, no visu, >0 visualize
 ! =============================================================================== !
@@ -24,35 +24,41 @@ RiemannBC        = Same           ! Riemann solver used for boundary conditions:
 ! =============================================================================== !
 ! MESH
 ! =============================================================================== !
-MeshFile         = turb_channel_mesh.h5
+MeshFile         = turb_chan_re0180_mesh.h5
+meshScale        = 1.
 useCurveds       = F
 ! =============================================================================== !
 ! EQUATION
 ! =============================================================================== !
-IniExactFunc     = 1
+IniExactFunc     = 517
 IniRefState      = 1
-RefState         = (/1.,0.118,0.,0.,1./)
-Mu0              = 5.555555556e-3 ! viscosity set to 1/Re_tau
-R                = 1.
+Re_tau           = 180.
+RefState         = (/1., 1., 0., 0., 78351./)
+mu0              = 0.005555555556
+R                = 287.
+BodyForceType    = fixedPressureGradient
 bodyForceVector  = (/1., 0., 0./)
+BoxSize          = (/0., 0., 0./)
+
 ! =============================================================================== !
 ! TIMEDISC
 ! =============================================================================== !
-tend             = 15.0           ! End time, time unit is viscous time: l/u_tau
-CFLscale         = 0.3            ! Scaling of theoretical CFL number
-DFLscale         = 0.3            ! Scaling of theoretical DFL number
+tend             = 5.0
+CFLscale         = 0.5            ! Scaling of theoretical CFL number
+DFLscale         = 0.5            ! Scaling of theoretical DFL number
 ! =============================================================================== !
 ! ANALYZE
 ! =============================================================================== !
-Analyze_dt       = 1.e-2             ! Timestep of analyze outputs
-nWriteData       = 100               ! Intervall as multiple of Analyze_dt at which HDF5 files (e.g.
-CalcErrorNorms   = F                 ! Calculate error norms
-CalcBodyForces   = F                 ! Calculate body forces (BC 4/9)
+Analyze_dt       = 1.e-1
+nWriteData       = 10                ! Intervall as multiple of Analyze_dt at which HDF5 files (e.g.
+CalcErrorNorms   = T                 ! Calculate error norms
+CalcBodyForces   = T                 ! Calculate body forces (BC 4/9)
 CalcBulkVelocity = F                 ! Calculate bulk velocity/momentum
 CalcMeanFlux     = F                 ! Calculate mean flux of conservative vars through boundary
 CalcWallVelocity = F                 ! Calculate velocities at the walls (BC 3/4/9)
 CalcTimeAverage  = F                 ! Calculate time average of field data
 CalcResiduals    = T                 ! Set true to compute residuals
+WriteBodyForces  = T
 ! =============================================================================== !
 ! Boundary specification
 ! =============================================================================== !
