Added rans_kg, all files in this commit revised.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,7 +36,7 @@ ENDIF()
 SET(FLEXI_EQNSYSNAME "navierstokes" CACHE STRING
                      "Used equation system (navierstokes/linearscalaradvection/rans_sa)")
 SET_PROPERTY(CACHE FLEXI_EQNSYSNAME  PROPERTY STRINGS ${EQNSYSTEMS})
-IF(   FLEXI_EQNSYSNAME STREQUAL "navierstokes")
+IF(    FLEXI_EQNSYSNAME STREQUAL "navierstokes")
   ADD_DEFINITIONS(-DPP_nVar=5 -DPP_nVarPrim=6 -DEQNSYSNR=2)
   SET(WITHEOS 1)
 ELSEIF(FLEXI_EQNSYSNAME STREQUAL "linearscalaradvection")
@@ -44,6 +44,9 @@ ELSEIF(FLEXI_EQNSYSNAME STREQUAL "linearscalaradvection")
   SET(WITHEOS 0)
 ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_sa")
   ADD_DEFINITIONS(-DPP_nVar=6 -DPP_nVarPrim=7 -DEQNSYSNR=3)
+  SET(WITHEOS 1)
+ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_kg")
+  ADD_DEFINITIONS(-DPP_nVar=7 -DPP_nVarPrim=8 -DEQNSYSNR=4)
   SET(WITHEOS 1)
 ELSE()
   MESSAGE(SEND_ERROR "Unknown equation system.")
