--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,9 +34,9 @@ ENDIF()
 # Equation system
 # =========================================================================
 SET(FLEXI_EQNSYSNAME "navierstokes" CACHE STRING
-                     "Used equation system (navierstokes/linearscalaradvection/rans_sa)")
+                     "Used equation system (navierstokes/linearscalaradvection/rans_sa/rans_kg)")
 SET_PROPERTY(CACHE FLEXI_EQNSYSNAME  PROPERTY STRINGS ${EQNSYSTEMS})
-IF(   FLEXI_EQNSYSNAME STREQUAL "navierstokes")
+IF(    FLEXI_EQNSYSNAME STREQUAL "navierstokes")
   ADD_DEFINITIONS(-DPP_nVar=5 -DPP_nVarPrim=6 -DEQNSYSNR=2)
   SET(WITHEOS 1)
 ELSEIF(FLEXI_EQNSYSNAME STREQUAL "linearscalaradvection")
@@ -44,6 +44,9 @@ ELSEIF(FLEXI_EQNSYSNAME STREQUAL "linearscalaradvection")
   SET(WITHEOS 0)
 ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_sa")
   ADD_DEFINITIONS(-DPP_nVar=6 -DPP_nVarPrim=7 -DEQNSYSNR=3)
+  SET(WITHEOS 1)
+ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_kg")
+  ADD_DEFINITIONS(-DPP_nVar=5 -DPP_nVarPrim=6 -DEQNSYSNR=4)
   SET(WITHEOS 1)
 ELSE()
   MESSAGE(SEND_ERROR "Unknown equation system.")
@@ -64,8 +67,8 @@ IF(FLEXI_SPLIT_DG)
   IF(FLEXI_NODETYPE STREQUAL "GAUSS")
     MESSAGE(SEND_ERROR "FLEXI_SPLIT_DG only works on FLEXI_NODETYPE==GAUSS-LOBATTO points.")
   ENDIF()
-  IF(NOT FLEXI_EQNSYSNAME STREQUAL "navierstokes")
-    MESSAGE(SEND_ERROR "FLEXI_SPLIT_DG only works for FLEXI_EQNSYSNAME==navierstokes.")
+  IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg")))
+    MESSAGE(SEND_ERROR "FLEXI_SPLIT_DG only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg.")
   ENDIF()
 ENDIF()
 
@@ -78,8 +81,8 @@ IF(FLEXI_PP_LIMITER)
   IF(FLEXI_NODETYPE STREQUAL "GAUSS")
     MESSAGE(WARNING "Positivity Preserving Limiter only works on volume interpolation points. Positivity on faces is not guaranteed with FLEXI_NODETYPE==GAUSS." )
   ENDIF()
-  IF(NOT FLEXI_EQNSYSNAME STREQUAL "navierstokes")
-    MESSAGE(SEND_ERROR "FLEXI_PP_LIMITER only works for FLEXI_EQNSYSNAME==navierstokes.")
+  IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg")))
+    MESSAGE(SEND_ERROR "FLEXI_PP_LIMITER only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg.")
   ENDIF()
 ENDIF()
 
@@ -123,7 +126,7 @@ IF (FLEXI_PARABOLIC)
   ENDIF()
 
   # Set the law for viscosity
-  IF((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_sa"))
+  IF((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_sa") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg"))
     SET(FLEXI_VISCOSITY "constant" CACHE STRING "Method to calculate viscosity (constant/sutherland/powerlaw)")
     SET_PROPERTY(CACHE FLEXI_VISCOSITY PROPERTY STRINGS constant sutherland powerlaw)
     IF(    FLEXI_VISCOSITY STREQUAL "constant")
@@ -179,8 +182,8 @@ IF(NOT (FLEXI_FV STREQUAL "OFF"))
   IF(    FLEXI_FV STREQUAL "SWITCH")
     ADD_DEFINITIONS(-DFV_ENABLED=1)
   ELSEIF(FLEXI_FV STREQUAL "BLEND")
-    IF(NOT FLEXI_EQNSYSNAME STREQUAL "navierstokes")
-      MESSAGE(SEND_ERROR "FLEXI_FV=BLEND only works for FLEXI_EQNSYSNAME==navierstokes.")
+    IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg")))
+      MESSAGE(SEND_ERROR "FLEXI_FV=BLEND only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg.")
     ELSEIF(FLEXI_NODETYPE STREQUAL "GAUSS")
       MESSAGE(SEND_ERROR "FLEXI_FV=BLEND only works on FLEXI_NODETYPE==GAUSS-LOBATTO points.")
     ENDIF()
