--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,7 +46,7 @@ ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_sa")
   ADD_DEFINITIONS(-DPP_nVar=6 -DPP_nVarPrim=7 -DEQNSYSNR=3)
   SET(WITHEOS 1)
 ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_kg")
-  ADD_DEFINITIONS(-DPP_nVar=5 -DPP_nVarPrim=6 -DEQNSYSNR=4)
+  ADD_DEFINITIONS(-DPP_nVar=7 -DPP_nVarPrim=8 -DEQNSYSNR=4)
   SET(WITHEOS 1)
 ELSE()
   MESSAGE(SEND_ERROR "Unknown equation system.")
@@ -138,14 +138,17 @@ IF (FLEXI_PARABOLIC)
     ELSE()
       MESSAGE(SEND_ERROR "No such VISCOSITY known.")
     ENDIF()
-    IF (FLEXI_EDDYVISCOSITY)
-      IF(FLEXI_2D)
-        MESSAGE(SEND_ERROR " FLEXI_EDDYVISCOSITY is enabled, please disable FLEXI_2D")
-      ENDIF()
-    ENDIF()
+    # IF (FLEXI_EDDYVISCOSITY)
+    #   IF(FLEXI_2D)
+    #     MESSAGE(SEND_ERROR " FLEXI_EDDYVISCOSITY is enabled, please disable FLEXI_2D")
+    #   ENDIF()
+    # ENDIF()
   ENDIF()
 ELSE()
   ADD_DEFINITIONS(-DPARABOLIC=0)
+  IF (FLEXI_EQNSYSNAME STREQUAL "rans_kg")
+    MESSAGE(SEND_ERROR "rans_kg cannot work with FLEXI_PARABOLIC=OFF.")
+  ENDIF()
 ENDIF()
 
 # =========================================================================
@@ -155,8 +158,14 @@ CMAKE_DEPENDENT_OPTION(FLEXI_EDDYVISCOSITY "Enable eddy viscosity modells" OFF
                                            "FLEXI_PARABOLIC"               OFF)
 IF (FLEXI_EDDYVISCOSITY)
   ADD_DEFINITIONS(-DEDDYVISCOSITY=1)
+  IF (NOT FLEXI_EQNSYSNAME STREQUAL "rans_kg" AND FLEXI_2D)
+    MESSAGE(SEND_ERROR "FLEXI_EDDYVISCOSITY is enabled, please disable FLEXI_2D")
+  ENDIF()
 ELSE()
   ADD_DEFINITIONS(-DEDDYVISCOSITY=0)
+  IF (FLEXI_EQNSYSNAME STREQUAL "rans_kg")
+    MESSAGE(SEND_ERROR "rans_kg cannot work with FLEXI_EDDYVISCOSITY=OFF.")
+  ENDIF()
 ENDIF()
 
 # =========================================================================
@@ -214,6 +223,22 @@ IF(FLEXI_PERFORMANCE_OPTLIFT)
   ADD_DEFINITIONS(-DPP_OPTLIFT=1)
 ELSE()
   ADD_DEFINITIONS(-DPP_OPTLIFT=0)
+ENDIF()
+
+# =========================================================================
+# Decoupled system
+# =========================================================================
+IF(BUILD_TYPE_LC STREQUAL "validate")
+  SET(FLEXI_HYBRID_IS_VALIDATE ON)
+ELSE()
+  SET(FLEXI_HYBRID_IS_VALIDATE OFF)
+ENDIF()
+CMAKE_DEPENDENT_OPTION(FLEXI_HYBRID_DECOUPLE "Decouple the turbulence model and the N-S equation" OFF
+                                             "NOT FLEXI_HYBRID_IS_VALIDATE" ON)
+IF(FLEXI_HYBRID_DECOUPLE)
+  ADD_DEFINITIONS(-DDECOUPLE=1)
+ELSE()
+  ADD_DEFINITIONS(-DDECOUPLE=0)
 ENDIF()
 
 # =========================================================================
