Squashed commit of the following:
commit 6731238a2c94e3cb13b878451c3365e59b134ca2
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Tue Mar 19 09:56:53 2024 +0800

    A working k-omega model? replaced tau with omega

commit 036d5573caf9b9e1d6c560d903f9f07b52d00c40
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Mon Mar 18 16:28:03 2024 +0800

    some improvement

commit ccdc75167ee47ce59c0ac6832530172726ac1299
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Mon Mar 18 13:00:09 2024 +0800

    add bounds to improve robustness; somehow k and nut are stll too small for flatplate

commit 3c5fec64bf6777f45a486090018fd52e0295cec1
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Sun Mar 17 21:10:15 2024 +0800

    slight modification

commit 73bbda40ffcd100695d6f72e9083956d607e3502
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Sun Mar 17 20:24:34 2024 +0800

    looser constraint on initial steps

commit 3f1765b2d8273d1e5563d518856ad6ac823e0e01
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Sun Mar 17 19:51:37 2024 +0800

    A temporary version that is stable?

commit 30bee838148ec2c99d77ff47b335c42bc8a25674
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Sun Mar 17 18:50:50 2024 +0800

    Fix negative pressure -- setting upper bound for possible TKE

commit c38cadf7987bb0bef1f1a1fac3402fb868f7abd7
Author: Shimushushushu <wangsijie@outlook.com>
Date:   Sat Mar 16 16:24:42 2024 +0800

    Fixed incomplete eos.h, analyze, and source terms.

commit 24afa389af754efe9c7f4b357598f46b88b2c881
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Fri Mar 15 19:44:54 2024 +0800

    A k-tau implementation in log form; inflow takes k and omega reference values; need to check FP underflow

commit e5b87ca94fbaaad937f94bb01ffa706a761facd6
Author: Shimushushushu <wangsijie@outlook.com>
Date:   Fri Mar 15 13:58:33 2024 +0800

    Added dk/dn = 0.

commit 483c1cdbefdf17945481282d156ecbb82e4773d7
Author: zifeiyin <yinzifei@sjtu.edu.cn>
Date:   Fri Mar 15 11:28:29 2024 +0800

    problem solv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,9 +190,9 @@ ENDIF()
 # =========================================================================
 # make sure that the default is a RELEASE
 IF (NOT CMAKE_BUILD_TYPE)
-  SET (CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build, options are: Debug, Release, Profile, Sanitize (only GNU))." FORCE)
+  SET (CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build, options are: Debug, Release, Profile, Sanitize (only GNU), Validate (only GNU)." FORCE)
    IF (CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
-     SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release Profile Sanitize)
+     SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release Profile Sanitize Validate)
    ELSEIF (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
      SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release Profile)
    ELSEIF (CMAKE_Fortran_COMPILER_ID MATCHES "Cray")
@@ -201,7 +201,7 @@ IF (NOT CMAKE_BUILD_TYPE)
 ENDIF (NOT CMAKE_BUILD_TYPE)
 
 STRING(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LC)
-IF (BUILD_TYPE_LC MATCHES "debug" OR BUILD_TYPE_LC MATCHES "sanitize")
+IF (BUILD_TYPE_LC MATCHES "debug" OR BUILD_TYPE_LC MATCHES "sanitize" OR BUILD_TYPE_LC MATCHES "validate")
   ADD_DEFINITIONS("-DDEBUG")
 ELSE()
   IF (HASIPO)
