--- a/hybridTutorials/01_flatplate/02_ddes_kg_rungeKutta/parameter.ini
+++ b/hybridTutorials/01_flatplate/02_ddes_kg_rungeKutta/parameter.ini
@@ -35,7 +35,7 @@ DFLscale         = 0.3               ! Scaling of theoretical DFL number
 ! =============================================================================== !
 ! RIEMANN
 ! =============================================================================== !
-Riemann          = CH
+Riemann          = hllc
 ! =============================================================================== !
 ! LES MODELL
 ! =============================================================================== !
@@ -44,7 +44,7 @@ eddyViscType     = 1              ! Choose LES model, 1:Smagorinsky
 ! ANALYZE
 ! =============================================================================== !
 Analyze_dt       = 1.e-6             ! Timestep of analyze outputs
-nWriteData       = 5000               ! Intervall as multiple of Analyze_dt at which HDF5 files (e.g.
+nWriteData       = 2000               ! Intervall as multiple of Analyze_dt at which HDF5 files (e.g.
                                      ! State,TimeAvg,Fluc) are written.
 CalcErrorNorms   = T                 ! Calculate error norms
 CalcBodyForces   = F                 ! Calculate body forces (BC 4/9)
