--- a/hybridTutorials/02_backward_facing_step/01_ddes_kg_rungeKutta/parameter_flexi.ini
+++ b/hybridTutorials/02_backward_facing_step/01_ddes_kg_rungeKutta/parameter_flexi.ini
@@ -18,8 +18,8 @@ useCurveds       = F
 ! =============================================================================== !
 IniExactFunc     = 1
 IniRefState      = 1
-RefState         = (/1.225,11.3,0.,0.,11325.0,0.001,7605.26/)
-RefState         = (/1.225,11.3,0.,0.,11342.5,0.001,7605.26/)
+RefState         = (/1.225,0., 0.,0.,11325.0,0.001,7605.26/)
+RefState         = (/1.225,0. ,0.,0.,11342.5,0.001,7605.26/)
 Mu0              = 0.00001853906
 ! =============================================================================== !
 ! BOUNDARY CONDITION
@@ -47,19 +47,14 @@ Riemann          = CH
 eddyViscType     = 4              ! Choose LES model, 4:dynamic Smagorinsky
 
 ! =============================================================================== !
-! BODY FORCE
-! =============================================================================== !
-IniSourceTerm    = 1
-ConstantBodyForce = (/95.55, 0., 0. /)
-! =============================================================================== !
 ! ANALYZE
 ! =============================================================================== !
-Analyze_dt       = 1.e-6             ! Timestep of analyze outputs
+Analyze_dt       = 5.e-7             ! Timestep of analyze outputs
 nWriteData       = 1000              ! Intervall as multiple of Analyze_dt at which HDF5 files (e.g.
                                      ! State,TimeAvg,Fluc) are written.
 CalcErrorNorms   = F                 ! Calculate error norms
 CalcBodyForces   = F                 ! Calculate body forces (BC 4/9)
-CalcBulkState    = T                 ! Calculate bulk state
+CalcBulkState    = F                 ! Calculate bulk state
 CalcMeanFlux     = F                 ! Calculate mean flux of conservative vars through boundary
 CalcWallVelocity = F                 ! Calculate velocities at the walls (BC 3/4/9)
 CalcTimeAverage  = F                 ! Calculate time average of field data
